See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.70.00

              Add yuy2topam.  Thanks Michael Haardt.

14.12.25 BJH  Release 10.69.00

              pnmnorm: add -bsingle, -wsingle.

              ppmtoarbtxt: Do some validation of format strings.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamcrater: Add -verbose.

              ppmtoarbtxt: Fail if a #() escape sequence runs off end of
              file or is too long to process; before, the program would
              treat the text from # to EOF or where the buffer filled up
              as literal text, even ignoring any #() within.

              NetBSD: show actual numbers in messages instead of "f" or
              no information, by using NetBSD's vasprintf.

              Make %g in messages display the actual number instead of "g" in
              messages where platform doesn't have vasprintf.  (But scores of
              %f are still left).

              anytopnm: convert all images in a multi-image GIF instead of
              just the first.
              
              Improve "bad magic number" message from pbmXXX, and pgmXXX, and
              pnmXXX programs.

              Fix bogus message from ppmXXX programs when the input is not
              (per the magic number) a Netpbm image.  Introduced after
              Netpbm 10.26 (January 2005) but before Netpbm 10.35 (August
              2006).

              ppmtoarbtxt: Fix some undefined behavior when program limits
              are exceeded (i.e. buffer overruns).

              pambackground: fix bug: segfault or incorrect results in most
              cases.  Thanks Ludolf Holzheid (ludolf.holzheid@gmx.de).
              Introduced in Netpbm 10.37 (December 2006).

              Windows build: fix universal build failure with "No rule to make